# dsport

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE.Django  Makefile  PHASE_3_COVERAGE_ANALYSIS.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_BRIDGE_TESTS.md  README.md  WORKSPACE.md  dsport.code-workspace  opts.json  pyproject.toml  requirements.txt  rustfmt.toml  test_mathjax.rs
src/: .gitignore  Cargo.toml  run_py.rs  rustfmt.toml  test_debug.rs  update_lib.py
src/docutilsrs/: Cargo.toml  pyproject.toml  test_compact.rs  test_compact_file.rs
src/docutilsrs/examples/: math_demo.rs
src/docutilsrs/python/: docutilsrs_hybrid.py  docutilsrs_plugins.py  docutilsrs_pygments.py
src/docutilsrs/src/: cli.rs  code_block.rs  doctree.rs  html5_writer.rs  latex_writer.rs  lib.rs  manpage_writer.rs  odt_writer.rs  parser.rs  plugins.rs  python.rs  transforms.rs  writer.rs  zip_writer.rs
src/docutilsrs/tests/: cli_parity.rs  html5_coverage.rs  latex_coverage.rs  manpage_coverage.rs  math.rs  odt_coverage.rs  options.rs  parser.rs  pseudoxml_coverage.rs  snapshot.rs
src/docutilsrs/tests/common/: mod.rs
src/docutilsrs/tests/snapshots/: parser__around_bullet_list.snap  parser__bullet_continuation.snap  parser__bullet_list_hyphen.snap  parser__empty.snap  parser__enum_arabic_period.snap  parser__enum_auto_hash.snap  parser__enum_loweralpha_start.snap  parser__enum_lowerroman_ambiguous.snap  parser__escape_blocks_emphasis.snap  parser__escape_ws_collapses.snap  parser__inline_mix.snap  parser__literal_no_nest.snap  parser__multi_line_paragraph.snap  parser__no_nesting.snap  parser__reference_resolved.snap  parser__single_paragraph.snap  parser__two_paragraphs.snap  snapshot__version.snap
src/jinja2rs/: Cargo.toml  README.md  porting-plan.md
src/jinja2rs/benches/: compile.rs  render.rs
src/jinja2rs/src/: ansible_filters.rs  ansible_inventory.rs  ansible_validation.rs  bridge.rs  compat.rs  environment.rs  errors.rs  filters.rs  globals.rs  i18n.rs  kubernetes_filters.rs  kubernetes_inventory.rs  lib.rs  loaders.rs  sandbox.rs  sandbox_config.rs  sphinx_glue.rs
src/jinja2rs/src/filters/: django.rs
src/jinja2rs/tests/: django_mode.rs  test_ansible_filters_integration.rs  test_api_parity.rs  test_compat_modes.rs  test_environment.rs  test_filters_parametrized.rs  test_filters_parity.rs  test_globals_parametrized.rs  test_i18n_parametrized.rs  test_loader_parity.rs  test_loaders_parametrized.rs  test_minimal_rstest.rs  test_sandbox_parity.rs  test_sandbox_security.rs
src/markupsafers/: Cargo.toml  README.md  pyproject.toml
src/markupsafers/src/: bridge.rs  escape.rs  lib.rs  markup.rs  minijinja_compat.rs
src/markupsafers/tests/: integration.rs
src/mathrenderrs/: Cargo.toml  pyproject.toml
src/mathrenderrs/examples/: backend_matrix.rs
src/mathrenderrs/src/: lib.rs
src/myst-md-rs/: Cargo.toml  README.md  pyproject.toml
src/myst-md-rs/examples/: math_demo.rs  math_demo_myst.rs
src/myst-md-rs/src/: directives.rs  frontmatter.rs  lib.rs  options.rs  preprocess.rs  render.rs  role.rs
src/myst-md-rs/tests/: commonmark.rs  parity.rs  snapshot.rs
src/myst-md-rs/tests/common/: mod.rs
src/myst-md-rs/tests/data/: UPSTREAM.md
src/myst-md-rs/tests/snapshots/: snapshot__backtick_directive.snap  snapshot__block_math.snap  snapshot__colon_fence_directive.snap  snapshot__commonmark_basic.snap  snapshot__features.snap  (+6 more)
src/pygmentsrs/: COVERAGE.md  Cargo.toml  README.md  pyproject.toml
src/pygmentsrs/docs/: compat.md
src/pygmentsrs/fuzz/: Cargo.toml  QUICK_REFERENCE.md  README.md  quickstart.sh  run_with_all_sanitizers.sh  run_with_asan.sh  run_with_msan.sh  run_with_ubsan.sh
src/pygmentsrs/src/: bridge.rs  lexer.rs  lib.rs  regexopt.rs  token.rs
src/pygmentsrs/tests/: snapshot.rs  test_branch_coverage.rs  test_bridge_extended_languages.rs  test_bridge_fuzz.rs  test_bridge_performance.rs  test_bridge_pyo3_100pct.rs  test_byteparity_formatters.rs  test_cli_integration.rs  test_delegating_lexer_coverage.rs  test_formatter_edge_cases.rs  test_formatter_markup_coverage.rs  test_formatter_style_coverage.rs  test_formatter_terminal_coverage.rs  test_json_lexer_100pct.rs  test_lexer_engine_state_machine.rs  test_markup_formatter_100pct.rs
src/sphinxdocrs/: AGENTS.md  Cargo.toml  locale  pyproject.toml
src/sphinxdocrs/benches/: sphinxdocrs.rs
src/sphinxdocrs/examples/: fetch_mathjax.rs  read_conf.rs
src/sphinxdocrs/python/: sphinxdocrs_hybrid.py
src/sphinxdocrs/src/: addnodes.rs  application.rs  assets.rs  config.rs  environment.rs  errors.rs  events.rs  extension.rs  intl.rs  lib.rs  locale.rs  project.rs  registry.rs  roles.rs  scan.rs  util_console.rs  util_docstrings.rs  util_lines.rs  util_matching.rs  util_osutil.rs  util_rst.rs  util_uri.rs  versioning.rs
src/sphinxdocrs/tests/: addnodes.rs  apidoc.rs  application.rs  assets.rs  autogen.rs  build.rs  builders.rs  builders_json.rs  config.rs  environment.rs  intl.rs  locale.rs  otherdocs.rs  parity.rs  quickstart.rs  quickstart_cli.rs  registry.rs  roles.rs  scan_requirements.rs  snapshot.rs  util_extra.rs  util_rst_osutil.rs  versioning.rs
src/tests/: conftest.py  test_cli_scripts.py  test_coverage_gaps.py  test_doctree_api.py  test_docutilsrs_plugins_coverage.py  test_docutilsrs_pygments.py  test_html5_smoke.py  test_hybrid.py  test_json_ld_yaml_ld_lexers.py  test_makefile_tasks.py  test_parity_pseudoxml.py  test_phase3_hybrid_e2e.py  test_phase5_resolver.py  test_plugin_bridge.py  test_pygments_diff_lexer.py  test_pygments_generated_lexers.py  test_pygments_json_lexer.py  test_pygments_native.py  test_pygments_plugin.py  test_smoke.py  test_sphinxdocrs_errors.py  test_sphinxdocrs_events.py  test_sphinxdocrs_extension.py  test_sphinxdocrs_hybrid.py  test_sphinxdocrs_project.py  test_sphinxdocrs_project_discover.py  test_sphinxdocrs_util_console.py  test_sphinxdocrs_util_matching.py  test_upstream_parser.py  test_writer_odt.py  test_writer_odt_parity.py  test_writers_latex_manpage.py
src/tests/cli_tests/: test_pygments_cli.py
src/tools/: gen_lexer.py  gen_registry.py
(+157 files in other folders)
