[workspace]
resolver = "2"
members = [
    "src/docutilsrs",
    "src/jinja2rs",
    "src/markupsafers",
    "src/mathrenderrs",
    "src/myst-md-rs",
    "src/pygmentsrs",
    "src/sphinxdocrs",
]

# Vendored upstream projects and test fixtures — not part of our workspace
exclude = [
    "src/RaTeX",
    "src/docutils",
    "src/sphinx",
    "src/jinja2",
    "src/markdown-it-py",
    "src/minijinja",
    "src/MyST-Parser",
    "src/pygments",
    "tests",
]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
rust-version = "1.85"

[workspace.dependencies]
pyo3 = "0.28.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
insta = { version = "1.47", features = ["yaml"] }
rstest = "0.22"
mockall = "0.13"
wiremock = "0.6"
rvcr = "0.2"
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
split-debuginfo = "packed"
