[workspace]
resolver = "2"
members = [
    "src/docutilsrs",
    "src/jinja2rs",
    "src/markupsafers",
    "src/mathrenderrs",
    "src/myst-md-rs",
    "src/pygmentsrs",
    "src/sphinxdocrs",
]

# Vendored upstream projects and test fixtures — not part of our workspace
exclude = [
    "src/RaTeX",
    "src/docutils",
    "src/sphinx",
    "src/jinja2",
    "src/markdown-it-py",
    "src/minijinja",
    "src/MyST-Parser",
    "src/pygments",
    "tests",
]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
rust-version = "1.85"

[workspace.dependencies]
pyo3 = "0.29"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
insta = { version = "1.47", features = ["yaml"] }
rstest = "0.26"
snapbox = { version = "0.6", features = ["cmd"] }
mockall = "0.14"
wiremock = "0.6"
rvcr = "0.2"
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = "thin"
codegen-units = 1

# Faster CI / maturin builds — no LTO, more parallelism, still optimized.
# Use with: cargo build --profile release-fast
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2

[profile.dev]
# opt-level 1 produces less redundant LLVM IR than 0, shrinking per-file
# codegen time for the 455 generated lexer files.
opt-level = 1
# Line-tables-only debug info cuts .d symbol-file I/O significantly while
# keeping backtraces and breakpoints useful.
debug = 1
split-debuginfo = "packed"

# Compile all *dependencies* (fancy-regex, phf, pyo3, …) with full
# optimisations so regex compilation and PHF lookup are fast at runtime,
# and so that fancy-regex's own compilation doesn't balloon LLVM IR.
[profile.dev.package."*"]
opt-level = 3
debug = false

# Generated lexer code: mid-level optimisation keeps LLVM IR compact
# without the full cost of opt-level 3 on 8.7 MB of source.
[profile.dev.package.pygmentsrs]
opt-level = 2
