[workspace]
resolver = "2"
members = [
    "docutilsrs",
    "sphinxdocrs",
]

[workspace.package]
edition = "2021"
license = "BSD-2-Clause"
rust-version = "1.75"

[workspace.dependencies]
pyo3 = "0.28"
insta = { version = "1.39", features = ["yaml"] }

[profile.release]
lto = "thin"
codegen-units = 1
