[workspace]
resolver = "2"
members = [
    "docutilsrs",
    "myst-md-rs",
    "pygmentsrs",
    "sphinxdocrs",
]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
rust-version = "1.85"

[workspace.dependencies]
pyo3 = "0.28.3"
insta = { version = "1.47", features = ["yaml"] }

[profile.release]
lto = "thin"
codegen-units = 1
