[package]
name = "docutilsrs"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust port of docutils"

[lib]
name = "docutilsrs"
crate-type = ["cdylib", "rlib"]

[features]
# Enabled by maturin when building the Python extension module.
# Left off for `cargo test` / `cargo build` so the test binary can link against libpython.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
clap = { workspace = true }
clap_complete = { workspace = true }
pygmentsrs = { path = "../pygmentsrs" }
mathrenderrs = { path = "../mathrenderrs" }

[dev-dependencies]
insta = { workspace = true }

[[bin]]
name = "docutils-rs"
path = "src/bin/docutils.rs"

[[bin]]
name = "rst2html-rs"
path = "src/bin/rst2html.rs"

[[bin]]
name = "rst2html4-rs"
path = "src/bin/rst2html4.rs"

[[bin]]
name = "rst2html5-rs"
path = "src/bin/rst2html5.rs"

[[bin]]
name = "rst2latex-rs"
path = "src/bin/rst2latex.rs"

[[bin]]
name = "rst2man-rs"
path = "src/bin/rst2man.rs"

[[bin]]
name = "rst2odt-rs"
path = "src/bin/rst2odt.rs"

[[bin]]
name = "rst2pseudoxml-rs"
path = "src/bin/rst2pseudoxml.rs"

[[bin]]
name = "rst2s5-rs"
path = "src/bin/rst2s5.rs"

[[bin]]
name = "rst2xetex-rs"
path = "src/bin/rst2xetex.rs"
