[package]
name = "docutilsrs"
version = "0.0.1"
edition.workspace = true
# docutils is dedicated to the public domain (with BSD-2-Clause exceptions);
# see LICENSE.docutils at the workspace root.
license-file = "../../LICENSE.docutils"
rust-version.workspace = true
description = "Rust port of docutils"
keywords = ["markup", "rst", "reStructuredText", "parser"]
categories = ["text-processing", "documentation"]
homepage = "https://github.com/westurner/dsport/tree/main/src/docutilsrs"
repository = "https://github.com/westurner/dsport"
#documentation = "https://docutilsrs.readthedocs.io"
# Upstream docutils:
#   homepage = "https://docutils.sourceforge.io"
#   documentation = "https://docutils.sourceforge.io/docs/"
#   repository = "https://sourceforge.net/p/docutils/code/"

[lib]
name = "docutilsrs"
crate-type = ["cdylib", "rlib"]

[features]
# Enabled by maturin when building the Python extension module.
# Left off for `cargo test` / `cargo build` so the test binary can link against libpython.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
clap = { workspace = true }
clap_complete = { workspace = true }
pygmentsrs = { path = "../pygmentsrs" }
mathrenderrs = { path = "../mathrenderrs" }
chrono = "0.4.44"

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
rvcr = { workspace = true }

[[bin]]
name = "docutils-rs"
path = "src/bin/docutils.rs"

[[bin]]
name = "rst2html-rs"
path = "src/bin/rst2html.rs"

[[bin]]
name = "rst2html4-rs"
path = "src/bin/rst2html4.rs"

[[bin]]
name = "rst2html5-rs"
path = "src/bin/rst2html5.rs"

[[bin]]
name = "rst2latex-rs"
path = "src/bin/rst2latex.rs"

[[bin]]
name = "rst2man-rs"
path = "src/bin/rst2man.rs"

[[bin]]
name = "rst2odt-rs"
path = "src/bin/rst2odt.rs"

[[bin]]
name = "rst2pseudoxml-rs"
path = "src/bin/rst2pseudoxml.rs"

[[bin]]
name = "rst2s5-rs"
path = "src/bin/rst2s5.rs"

[[bin]]
name = "rst2xetex-rs"
path = "src/bin/rst2xetex.rs"
