[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "docutilsrs"
version = "0.0.1"
description = "Rust port of docutils"
requires-python = ">=3.9"
# docutils is dedicated to the public domain with BSD-2-Clause exceptions.
license = { text = "LicenseRef-public-domain", file = "../../LICENSE.docutils" }
keywords = ["markup", "rst", "reStructuredText", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/westurner/dsport"
"Source Code" = "https://github.com/westurner/dsport/tree/main/src/docutilsrs"
#Documentation = "https://docutilsrs.readthedocs.io"

"Upstream Homepage" = "https://docutils.sourceforge.io"
"Upstream Documentation" = "https://docutils.sourceforge.io/docs/"
"Upstream Source Code" = "https://sourceforge.net/p/docutils/code/"
"Upstream Issue Tracker" = "https://sourceforge.net/p/docutils/bugs/"
"Upstream Changelog" = "https://docutils.sourceforge.io/HISTORY.html"

[tool.maturin]
module-name = "docutilsrs"
manifest-path = "Cargo.toml"
features = ["extension-module"]

[project.scripts]
docutils-rs-py = "docutilsrs:main"
rst2html-rs-py = "docutilsrs:rst2html"
rst2html4-rs-py = "docutilsrs:rst2html4"
rst2html5-rs-py = "docutilsrs:rst2html5"
rst2latex-rs-py = "docutilsrs:rst2latex"
rst2man-rs-py = "docutilsrs:rst2man"
rst2odt-rs-py = "docutilsrs:rst2odt"
rst2pseudoxml-rs-py = "docutilsrs:rst2pseudoxml"
rst2s5-rs-py = "docutilsrs:rst2s5"
rst2xetex-rs-py = "docutilsrs:rst2xetex"
