[package]
name = "jinja2rs"
version = "0.0.1"
edition.workspace = true
# Jinja2 is licensed under BSD-3-Clause; see LICENSE.jinja2 at the workspace root.
# MiniJinja (the engine core) is Apache-2.0.
license = "BSD-3-Clause AND Apache-2.0"
rust-version.workspace = true
description = "Rust port of Jinja2, powered by minijinja, with Sphinx-compatible API"
keywords = ["jinja2", "template", "sphinx", "jinja", "minijinja"]
categories = ["template-engine", "text-processing"]
homepage = "https://github.com/westurner/dsport/tree/main/src/jinja2rs"
repository = "https://github.com/westurner/dsport"
# Upstream Jinja2:
#   homepage = "https://jinja.palletsprojects.com/"
#   repository = "https://github.com/pallets/jinja"
# Upstream MiniJinja:
#   homepage = "https://github.com/mitsuhiko/minijinja"

[lib]
name = "jinja2rs"
crate-type = ["cdylib", "rlib"]

[features]
# Enabled by maturin when building the Python extension module.
extension-module = ["pyo3/extension-module"]

# Enable Sphinx-specific glue (jinja2glue.py equivalent).
sphinx = []

# Enable sandbox mode (jinja2.sandbox.SandboxedEnvironment equivalent).
sandbox = []

# Enable i18n extension (gettext-based translation support).
i18n = []

# Enable seccomp filtering (Linux only; requires kernel >= 3.17).
# When enabled, SandboxedEnvironment can enforce syscall restrictions.
seccomp = ["nix/process"]

# Enable resource limits (ulimit-based memory/CPU restrictions).
# When enabled, SandboxedEnvironment can enforce OS resource limits.
resource-limits = ["nix/process"]

# Enable Python callable detection warnings in context validation.
# Logs warnings when Python objects are detected in template context
# (useful for migration from Python Jinja2).
python-callable-warnings = ["tracing"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
minijinja = { path = "../minijinja/minijinja", features = [
    "builtins",
    "debug",
    "deserialization",
    "macros",
    "multi_template",
    "adjacent_loop_items",
    "std_collections",
    "serde",
    "loader",
    "unicode",
] }
minijinja-contrib = { path = "../minijinja/minijinja-contrib", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", optional = true }
nix = { version = "0.28", features = [], optional = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
tempfile = "3"
serde_json = "1"

[[bin]]
name = "jinja2-rs"
path = "src/bin/jinja2.rs"
