[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "markupsafers"
version = "0.1.0"
description = "Rust port of Python MarkupSafe — safe HTML/XML markup strings"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
keywords = ["html", "escape", "markup", "safe", "jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD Software License",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
homepage = "https://github.com/westurner/dsport/tree/main/src/markupsafers"
source = "https://github.com/westurner/dsport"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "markupsafers"
