[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mathrenderrs"
version = "0.0.1"
description = "Math rendering backend selector for docutilsrs/sphinxdocrs/myst-md-rs (default: RaTeX → SVG)"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }

[tool.maturin]
module-name = "mathrenderrs"
manifest-path = "Cargo.toml"
features = ["extension-module"]
