[package]
name = "myst-md-rs"
version = "0.0.1"
edition.workspace = true
# MyST-Parser is licensed under MIT; see LICENSE.MyST-Parser at the workspace root.
license-file = "../../LICENSE.MyST-Parser"
rust-version.workspace = true
description = "Rust port of MyST-Parser built on pulldown-cmark"
keywords = ["markdown", "parser", "docutils", "sphinx"]
categories = ["text-processing", "parser-implementations"]
homepage = "https://github.com/westurner/dsport/tree/main/src/myst-md-rs"
repository = "https://github.com/westurner/dsport"
#documentation = "https://myst-md-rs.readthedocs.io"
# Upstream MyST-Parser:
#   homepage = "https://github.com/executablebooks/MyST-Parser"
#   documentation = "https://myst-parser.readthedocs.io"
#   repository = "https://github.com/executablebooks/MyST-Parser"


[lib]
name = "myst_md_rs"
crate-type = ["cdylib", "rlib"]

[features]
# Enabled by maturin when building the Python extension module.
# Left off for `cargo test` / `cargo build` so the test binary can link against libpython.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
pulldown-cmark-escape = "0.11"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
mathrenderrs = { path = "../mathrenderrs" }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
serde_json = "1"
