[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "myst-md-rs"
version = "0.0.1"
description = "Rust port of MyST-Parser built on pulldown-cmark"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }

[tool.maturin]
module-name = "myst_md_rs"
manifest-path = "Cargo.toml"
features = ["extension-module"]
