[package]
name = "pygmentsrs"
version = "0.0.1"
edition.workspace = true
# Pygments is licensed under BSD-2-Clause; see LICENSE.pygments at the workspace root.
license-file = "LICENSE.pygments"
rust-version.workspace = true
description = "Rust port of Pygments"
keywords = ["syntax", "highlighting", "lexer", "formatter"]
categories = ["text-processing"]
homepage = "https://github.com/westurner/dsport/tree/main/src/pygmentsrs"
repository = "https://github.com/westurner/dsport"
#eocumentation = "https://pygmentsrs.readthedocs.io"
# Upstream pygments:
#   homepage = "https://pygments.org"
#   documentation = "https://pygments.org/docs"
#   repository = "https://github.com/pygments/pygments"

[lib]
name = "pygmentsrs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
fancy-regex = "0.14"

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }

[[bin]]
name = "pygmentize-rs"
path = "src/bin/pygmentize.rs"
