[package]
name = "pygmentsrs"
version = "0.0.1"
edition.workspace = true
# Pygments is licensed under BSD-2-Clause; see LICENSE.pygments at the workspace root.
license-file = "LICENSE.pygments"
rust-version.workspace = true
description = "Rust port of Pygments"
keywords = ["syntax", "highlighting", "lexer", "formatter"]
categories = ["text-processing"]
homepage = "https://github.com/westurner/dsport/tree/main/src/pygmentsrs"
repository = "https://github.com/westurner/dsport"
#eocumentation = "https://pygmentsrs.readthedocs.io"
# Upstream pygments:
#   homepage = "https://pygments.org"
#   documentation = "https://pygments.org/docs"
#   repository = "https://github.com/pygments/pygments"

[lib]
name = "pygmentsrs"
crate-type = ["cdylib", "rlib"]

[features]
# Build as a Python extension module (required for `maturin develop/build`).
extension-module = ["pyo3/extension-module"]
# Include the PyO3 bridge to upstream `pygments` (Backend::Python / Backend::Auto
# fallback).  Disable with `--no-default-features` to produce a fully standalone
# Rust library with zero CPython dependency.
python-bridge = ["dep:pyo3"]
default = ["python-bridge"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"], optional = true }
fancy-regex = "0.14"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }

[[bin]]
name = "pygmentize-rs"
path = "src/bin/pygmentize.rs"
