[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pygmentsrs"
version = "0.0.1"
description = "Rust port of Pygments"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause", file = "../../LICENSE.pygments" }
keywords = ["syntax", "highlighting", "lexer", "formatter"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/westurner/dsport"
"Source Code" = "https://github.com/westurner/dsport/tree/main/src/pygmentsrs"
#Documentation = "https://pygmentsrs.readthedocs.io"

"Upstream Homepage" = "https://pygments.org"
"Upstream Documentation" = "https://pygments.org/docs"
"Upstream Source Code" = "https://github.com/pygments/pygments"
"Upstream Issue Tracker" = "https://github.com/pygments/pygments/issues"
"Upstream Changelog" = "https://github.com/pygments/pygments/blob/master/CHANGES"

[tool.maturin]
module-name = "pygmentsrs"
manifest-path = "Cargo.toml"
features = ["extension-module"]

[project.scripts]
pygmentize-rs-py = "pygmentsrs:main"
