[package]
name = "sphinxdocrs"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust port of Sphinx"

[lib]
name = "sphinxdocrs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
regex = "1.10"

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
rvcr = { workspace = true }

[[bin]]
name = "sphinx-build-rs"
path = "src/bin/sphinx_build.rs"

[[bin]]
name = "sphinx-quickstart-rs"
path = "src/bin/sphinx_quickstart.rs"

[[bin]]
name = "sphinx-apidoc-rs"
path = "src/bin/sphinx_apidoc.rs"

[[bin]]
name = "sphinx-autogen-rs"
path = "src/bin/sphinx_autogen.rs"
