[package]
name = "sphinxdocrs"
version = "0.0.1"
edition.workspace = true
# Sphinx is licensed under BSD-2-Clause; see LICENSE.sphinx at the workspace root.
license-file = "../../LICENSE.sphinx"
rust-version.workspace = true
description = "Rust port of Sphinxdoc"
keywords = ["sphinx", "documentation", "generator", "builder"]
categories = ["text-processing", "development-tools"]
homepage = "https://github.com/westurner/dsport/tree/main/src/sphinxdocrs"
repository = "https://github.com/westurner/dsport"
#documentation = "https://sphinxdocrs.readthedocs.io"
# Upstream sphinxdoc:
#   homepage = "https://www.sphinx-doc.org/"
#   documentation = "https://www.sphinx-doc.org/"
#   repository = "https://github.com/sphinx-doc/sphinx"

[lib]
name = "sphinxdocrs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
# Gate cross-language parity tests (requires Python + upstream sphinx in PATH).
parity = []

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
regex = "1.10"
glob = "0.3"
clap = { workspace = true }
jinja2rs = { path = "../jinja2rs" }
minijinja = { path = "../minijinja/minijinja" }
unicode-width = "0.2"
num_cpus = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
rvcr = { workspace = true }
tempfile = "3"

[[bin]]
name = "sphinx-build-rs"
path = "src/bin/sphinx_build.rs"

[[bin]]
name = "sphinx-quickstart-rs"
path = "src/bin/sphinx_quickstart.rs"

[[bin]]
name = "sphinx-apidoc-rs"
path = "src/bin/sphinx_apidoc.rs"

[[bin]]
name = "sphinx-autogen-rs"
path = "src/bin/sphinx_autogen.rs"
